tests/NormalTests/paczka1/fuzzy1/28003596.err
Error in line 5: duilTVCW S276 9,34
Error in line 7: duilTVCW S461 77,2
Error in line 28: duilTVCW S973 83,8
Error in line 32: S276 A660 66,5
